--- a/setup.cfg
+++ b/setup.cfg
@@ -19,6 +19,7 @@ packages = find:
 install_requires =
     click~=8.1.0
     requests~=2.32.3
+    jinja2~=3.1.5
 
 [options.entry_points]
 console_scripts =
